# somaccr

./: NJISJ Poverty.ipynb  NJISJ SoMa Home Ownership.ipynb  NSISJ Income Gap.ipynb  README.md  home_ownership.csv  income_gap.csv  pyproject.toml
