[tool.poetry]
name = "somaccr"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
censusdis = "^1.1.1"
jupyterlab = "^4.1.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = { version = "^24.1.1", extras = ['jupyter'] }
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
